# dev-board

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07e2ab742054_epics_parent_issue_links.py  14fdecbabdc9_jira_fields_task_comments.py  36d1964f2c2a_initial_schema.py  5045eb8610b5_sprints_task_sprint_id.py  6c60bbd571f8_attachments.py  c24aa8d548ba_issue_keys_activity_log.py  e1107501ae11_notifications.py  f04a33a1ee1a_add_projects_is_default.py
backend/app/: main.py
backend/app/core/: auth.py  authz.py  cache.py  config.py  logging.py  telemetry.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  attachment.py  notification.py  org.py  project.py  sprint.py  task.py  user.py
backend/app/routers/: attachments.py  notifications.py  orgs.py  projects.py  sprints.py  tasks.py  users.py
backend/app/schemas/: attachment.py  common.py  notification.py  org.py  project.py  sprint.py  task.py  user.py
backend/scripts/: reconcile_openfga.py
backend/tests/: conftest.py  helpers.py  test_auth_matrix.py  test_crud.py  test_issues.py  test_rbac.py
deploy/helm/: README.md
deploy/helm/devboard/: Chart.yaml  values.yaml
deploy/helm/devboard/charts/backend/: Chart.yaml
deploy/helm/devboard/charts/backend/templates/: _helpers.tpl  configmap.yaml  service.yaml  (+2 more)
deploy/helm/devboard/charts/frontend/: Chart.yaml
deploy/helm/devboard/charts/keycloak/: Chart.yaml
deploy/helm/devboard/charts/openfga/: Chart.yaml
deploy/helm/devboard/charts/postgres/: Chart.yaml
deploy/helm/devboard/charts/redis/: Chart.yaml
deploy/helm/devboard/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  secret.yaml
docs/: 00-INDEX.md  01-ARCHITECTURE.md  02-DATA-MODEL.md  03-AUTHORIZATION.md  04-API-SPEC.md  05-INFRASTRUCTURE.md  06-FRONTEND.md  07-TESTING.md  08-TASK-BREAKDOWN.md  09-GLOSSARY.md  10-FOLDER-STRUCTURE.md  Readme.md
frontend/: .env.local.example  .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/members/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/projects/[id]/settings/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/tenants/: page.tsx
frontend/components/: AddMemberSearch.tsx  AppShell.tsx  AttachmentItem.tsx  Avatar.tsx  Backlog.tsx  Board.tsx  Breadcrumbs.tsx  Column.tsx  CommandPalette.tsx  CreateIssueModal.tsx  DemoCredentials.tsx  ErrorState.tsx  GettingStarted.tsx  InlineAddCard.tsx  IssueModal.tsx  IssueView.tsx  Loader.tsx  MemberTable.tsx  Nav.tsx  NotificationBell.tsx  ProjectSwitcher.tsx  Protected.tsx  Reports.tsx  Select.tsx  Sidebar.tsx  TaskCard.tsx  ThemeToggle.tsx  issueMeta.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  Dialog.tsx  EmptyState.tsx  Input.tsx  Skeleton.tsx  Tabs.tsx  Tooltip.tsx
frontend/lib/: api.ts  auth.ts  logout.ts  roles.ts  store.ts  theme.ts
frontend/types/: next-auth.d.ts
infra/keycloak/: realm-export.json
infra/keycloak/themes/: README.md
infra/keycloak/themes/devboard/login/: theme.properties
infra/openfga/: bootstrap.sh  model.fga
infra/postgres/: init-dbs.sql
scripts/: day3-authz-test.py  smoke-test-day1.sh
(+15 files in other folders)
