[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devboard-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Auth - JWT validation
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",        # for JWKS fetch
    "python-multipart>=0.0.9",  # multipart file uploads (attachments)
    # OpenFGA client
    "openfga-sdk>=0.5.0",
    # Redis
    "redis[asyncio]>=5.0.0",
    # Observability
    "structlog>=24.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line length is handled by the formatter
    "B008",   # FastAPI uses function calls (Depends/Query) in argument defaults
    "UP042",  # `str, Enum` mix-in is intentional for SQLAlchemy enum columns
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
# conftest sets test env vars before importing the app, so imports follow code.
"tests/conftest.py" = ["E402"]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
